<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fuel Tracker</string>
    <string name="subtitle_main">Tracciamento rifornimenti</string>
    <string name="add_vehicle">Aggiungi veicolo</string>
    <string name="add_fuel">Aggiungi Rifornimento</string>
    <string name="charts">Grafici</string>
    <string name="charts_title">Grafici e statistiche</string>
    <string name="new_fuel_entry">Nuovo rifornimento</string>
    <string name="no_vehicles">Nessun veicolo registrato</string>
    <string name="tap_plus_add_vehicle">Tocca il pulsante + per aggiungere la tua prima auto</string>
    <string name="hint_car_name">Nome veicolo (opzionale)</string>
    <string name="hint_car_plate">Targa *</string>
    <string name="hint_fuel_type">Tipo carburante preferito (opzionale)</string>
    <string name="field_date">Data</string>
    <string name="field_fuel_type">Tipo carburante</string>
    <string name="field_liters">Litri</string>
    <string name="field_total_price">Prezzo totale (EUR)</string>
    <string name="field_km">Chilometri attuali</string>
    <string name="field_notes">Note (opzionale)</string>
    <string name="full_tank">Pieno completo</string>
    <string name="cancel">Annulla</string>
    <string name="save">Salva</string>
    <string name="add">Aggiungi</string>
    <string name="delete">Elimina</string>
    <string name="menu_view_details">Visualizza dettagli</string>
    <string name="menu_delete">Elimina</string>
    <string name="confirm_delete_title">Conferma eliminazione</string>
    <string name="confirm_delete_message">Sei sicuro di voler eliminare %1$s (%2$s)? Tutti i rifornimenti associati verranno eliminati permanentemente.</string>
    <string name="selected_vehicle">Veicolo selezionato: %1$s</string>
    <string name="select_vehicle_first">Seleziona prima un veicolo</string>
    <string name="vehicle_added">Veicolo aggiunto</string>
    <string name="vehicle_deleted">Veicolo eliminato</string>
    <string name="fuel_saved">Rifornimento salvato</string>
    <string name="default_fuel">Benzina</string>
    <string name="plate_required">Targa obbligatoria</string>
    <string name="fuel_type_required">Tipo carburante obbligatorio</string>
    <string name="invalid_liters">Litri non validi</string>
    <string name="invalid_price">Prezzo non valido</string>
    <string name="period">Periodo</string>
    <string name="quick_stats">Statistiche rapide</string>
    <string name="price_per_liter">Prezzo/litro</string>
    <string name="monthly_liters">Litri mensili</string>
    <string name="no_data_for_period">Nessun dato per il periodo selezionato</string>
    <string name="not_available">N/D</string>
    <string name="avg_price_value">Prezzo medio: EUR %.3f</string>
    <string name="avg_consumption_value">Consumo medio: %.2f L/100km</string>
    <string name="total_liters_value">Totale litri: %.2f L</string>
    <string name="count_value">Numero rifornimenti: %d</string>
</resources>
